# nornflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nornflow.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api_reference.md  blueprints_guide.md  core_concepts.md  failure_strategies.md  feature_roadmap.md  getting_started.md  hooks_guide.md  how_to_write_workflows.md  jinja2_filters.md  nornflow_and_workflows.md  nornflow_settings.md  nornflow_vars.md  packages_guide.md  quick_start.md  tests_guide.md  variables_basics.md
nornflow/: CHANGELOG.md  __init__.py  builder.py  catalogs.py  constants.py  exceptions.py  filters.py  inventory_filters.py  logger.py  masking.py  models.py  nornflow.py  nornir_manager.py  processors.py  settings.py  utils.py  validation.py  validators.py  workflow.py
nornflow/blueprints/: __init__.py  expander.py  resolver.py
nornflow/builtins/: __init__.py  constants.py  filters.py  hooks.py  processors.py  tasks.py  utils.py
nornflow/builtins/hooks/: __init__.py  if_hook.py  output.py  predicate.py  set_to.py  shush.py  single.py  store_as.py
nornflow/builtins/jinja2_filters/: __init__.py  custom_filters.py  py_wrapper_filters.py
nornflow/builtins/processors/: __init__.py  decorators.py  default_processor.py  failure_strategy_processor.py  hook_processor.py
nornflow/cli/: constants.py  entrypoint.py  exceptions.py  init.py  main.py  nox.py  run.py  show.py  validate.py
nornflow/cli/samples/: defaults.yaml  greet_user.py  hello_world.py  hello_world.yaml  nornflow.yaml
nornflow/cli/samples/nornir_configs/: config.yaml  defaults.yaml  groups.yaml  hosts.yaml
nornflow/cli/tests/unit/: conftest.py  test_init.py  test_run.py  test_show.py
nornflow/hooks/: __init__.py  base.py  context.py  exceptions.py  loader.py  mixins.py  registry.py  set_print_output_hook.py  set_to_hook.py
nornflow/j2/: __init__.py  constants.py  core.py  exceptions.py
nornflow/models/: __init__.py  base.py  blueprint.py  hookable.py  runnable.py  task.py  validators.py  workflow.py
nornflow/vars/: __init__.py  constants.py  context.py  exceptions.py  jinja2_utils.py  manager.py  processors.py  proxy.py
nornflow/vars/tests/unit/: conftest.py  test_e2e_var_system.py  test_error_conditions.py  test_host_namespace.py  test_jinja_filters.py  test_manager.py  test_processors.py  test_resolution.py
norsible/: settings.py
tests/: README.md
tests/integration/: output_masking_lab.py  project_bootstrap.py  store_as_lab.py  test_output_masking.py  test_store_as_failure_path.py  test_store_as_simple_mode_equivalence.py
tests/integration/catalog_namespaces/: __init__.py  conftest.py  lab_builder.py  test_catalog_namespace_integration.py
tests/integration/containerlab/: __init__.py  conftest.py  constants.py  lab_project.py  lab_runner.py  test_catalog_and_package.py  test_nornflow_show.py  test_output_masking.py  test_readonly_getters.py  test_store_as_failure_path.py  test_validate.py  test_vars_all_levels.py
tests/integration/containerlab/fixtures/overlay/blueprints/: lab_readonly_snapshot.yaml  lab_validate_loop_a.yaml  lab_validate_loop_b.yaml
tests/integration/containerlab/fixtures/overlay/j2_filters/: lab_prefix.py
tests/integration/containerlab/fixtures/overlay/nornir_configs/: groups.yaml
tests/integration/containerlab/fixtures/overlay/vars/: defaults.yaml
tests/integration/containerlab/fixtures/overlay/vars/lab/: defaults.yaml
tests/integration/containerlab/fixtures/overlay/workflows/: lab_integration.yaml  lab_output_masking.yaml  lab_store_as_failure.yaml  lab_validate_bad_args.yaml  lab_validate_bad_task.yaml  lab_validate_blueprint_loop.yaml  lab_validate_ok.yaml
tests/integration/containerlab/inventory/: hosts.yaml.example
tests/integration/fixtures/: constants.py
tests/integration/fixtures/common/workflows/: masking_credential_echo.yaml  masking_token_echo.yaml  store_as_failure_path.yaml  store_as_result_path.yaml  store_as_simple_mode.yaml
tests/unit/: conftest.py  test_cli_processors.py  test_moodels.py  test_nornflow.py  test_nornir_manager.py  test_nornir_manager_filtering.py  test_processors.py  test_processors_utils.py  test_workflow.py  test_workflow_filtering.py  test_workfow.py
tests/unit/blueprints/: conftest.py  test_blueprint_expander.py  test_blueprint_resolver.py
tests/unit/builtins/: conftest.py  test_filters.py  test_if_hook.py  test_output_hook.py  test_set_to_hook.py  test_shush_hook.py  test_single_hook.py  test_store_as_conditional_rollback.py  test_store_as_hook.py  test_tasks.py  test_utils.py
tests/unit/cli/: conftest.py  test_init.py  test_run.py  test_show.py  test_validate.py
tests/unit/core/: conftest.py  test_catalogs.py  test_failure_strategies.py  test_masking.py  test_masking_perf.py  test_models.py  test_nornflow.py  test_nornir_manager.py  test_nornir_manager_filtering.py  test_processors.py  test_utils.py  test_workflow.py  test_workflow_filtering.py
tests/unit/hooks/: conftest.py  test_base.py  test_jinja2_mixin.py  test_loader.py  test_registry.py  test_set_to_hook.py
tests/unit/j2/: conftest.py  test_core.py  test_qualified_filters.py
tests/unit/models/: conftest.py  test_base_model.py  test_hookable_model.py  test_runnable_model.py  test_task_model.py  test_workflow_model.py
tests/unit/settings/: test_settings.py
tests/unit/vars/: conftest.py  test_e2e_var_system.py  test_error_conditions.py  test_host_namespace.py  test_host_proxy.py  test_jinja_filters.py  test_manager.py  test_processors.py  test_resolution.py
(+1 files in other folders)
