[project]
name = "nornflow"
version = "0.0.1"
description = "A workflow orchestration tool for network automation built around Nornir."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andre Lima"}
]
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "nornir>=3.5.0",
    "nornir-utils>=0.2.0",
    "pydantic-serdes>=1.0.1",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "termcolor>=2.5.0",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nornflow*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",
    "ANN003",
    "ANN204",
    "ANN205",
    "ANN401",
    "ARG",
    "BLE001",
    "C901",
    "COM",
    "D",
    "EM",
    "ERA001",
    "F821",
    "FBT001",
    "FBT003",
    "G004",
    "PLW2901",
    "RET504",
    "RSE",
    "SIM102",
    "TCH",
    "TD002",
    "TD003",
    "FIX002",
    "TRY003",
    "TRY301",
    "TRY400",
    "PLR0915",
    "PLE0604",
    "RUF013"
]
extend-select = ["I"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
case-sensitive = false
order-by-type = false
combine-as-imports = true
no-lines-before = ["local-folder"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[project.scripts]
nornflow = "nornflow.cli.entrypoint:app"