[project]
name = "nornflow"
version = "0.6.0"
description = "A workflow orchestration tool for network automation built around Nornir."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andre Lima"}
]
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "jmespath>=1.0.1",
    "nornir>=3.5.0",
    "nornir-utils>=0.2.0",
    "pydantic-serdes>=1.0.3",
    "pydantic-settings>=2.12.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "termcolor>=2.5.0",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nornflow*"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.9.4",
    "pytest-cov>=6.0.0",
]
manual-tests = [
    "nornir-netbox>=0.3.0",
    "nornir-napalm>=0.5.0",
    "nornir-netmiko>=1.0.1",
    "nornir-nautobot>=4.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["tests/*", "nornflow/cli/tests/*", "nornflow/vars/tests/*", "debug_*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",
    "ANN001",
    "ANN003",
    "ANN204",
    "ANN205",
    "ANN401",
    "ARG",
    "BLE001",
    "C901",
    "COM",
    "D",
    "DTZ005",
    "EM",
    "ERA001",
    "F821",
    "FBT001",
    "FBT002",
    "FBT003",
    "G004",
    "PLW2901",
    "RET504",
    "RSE",
    "SIM102",
    "TCH",
    "TD002",
    "TD003",
    "FIX002",
    "TRY003",
    "TRY300",
    "TRY301",
    "TRY400",
    "PIE790",
    "PLR0913",
    "PLR0915",
    "PLE0604",
    "RET503",
    "RUF003",
    "RUF013"
]
extend-select = ["I"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
case-sensitive = false
order-by-type = false
combine-as-imports = true
no-lines-before = ["local-folder"]
known-first-party = ["nornflow"]

[tool.black]
line-length = 110
extend-exclude = '(^|/)tests/|(^|/)debug_.*\.py$'

[project.scripts]
nornflow = "nornflow.cli.entrypoint:app"
